# LinestringsSplitter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  linestringssplitter.cpp  output.cpp  output.hpp
